package SmartHome.domain.valueObjects;

public enum MeasurementUnit {
    Celsius,
    Percentage,
    Binary,
    Speed,
    Watts,
    WattsPerHour,
    Time
}
